OrderFlow/manifest/account-deployment.yaml
# account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
      - name: account-container
        image: fbhdevomsacr.azurecr.io/account-management:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
---
# account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-app-service
spec:
  selector:
    app: account
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP  # or LoadBalancer
