OrderFlow/manifest/customer-deployment.yaml
# customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer-container
        image: fbhdevomsacr.azurecr.io/customers:latest
        ports:
        - containerPort: 3002
        imagePullPolicy: Always
---
# customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3002
  type: ClusterIP
