OrderFlow/manifest/product-deployment.yaml
# product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product-container
        image: fbhdevomsacr.azurecr.io/products:latest
        ports:
        - containerPort: 3001
        imagePullPolicy: Always
        # env:
        # - name: ACCOUNT_MANAGEMENT_URL
        #   value: "http://account-app-service"
        # - name: PRODUCTS_URL
        #   value: "http://product-service"
        # - name: CUSTOMERS_URL
        #   value: "http://customer-service"
        # - name: ORDERS_URL
        #   value: "http://order-service"

---
# product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
  type: ClusterIP
