OrderFlow/manifest/testnoteport.yml
# account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
      - name: account-container
        image: am:local
        ports:
        - containerPort: 3000
        imagePullPolicy: Never
---
# account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-app-service
spec:
  selector:
    app: account
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 31000
  type: NodePort  # or LoadBalancer
